crates/xlate/tests/snapshots/golden_matrix__tools_choice_allowed_tools__gpt-4o-mini__20260910__responses_to_chat__gpt5_chat.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "Weather in Paris?"
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_weather",
        "description": "Get weather.",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "city": {
              "type": "string"
            }
          },
          "required": [
            "city"
          ],
          "type": "object"
        }
      }
    },
    {
      "type": "function",
      "function": {
        "name": "get_time",
        "description": "Get time.",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "tz": {
              "type": "string"
            }
          },
          "required": [
            "tz"
          ],
          "type": "object"
        }
      }
    }
  ],
  "max_completion_tokens": 128
}
--- headers ---
upstream_streams: false
--- degraded ---
ext.responses.tool_choice=dropped
